<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CreateAccountFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/tourMakerBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingBottom="30dp"
                android:text="@string/create_account"
                android:textColor="@color/google_purple"
                android:textSize="34sp" />


            <EditText
                android:id="@+id/txtEnterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_registration_text" />


            <EditText
                android:id="@+id/ditCreateUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />


            <EditText
                android:id="@+id/ditCreatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_registration_text"
                android:inputType="textPassword"/>


            <EditText
                android:id="@+id/ditReenterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenter_password_registration_text"
                android:inputType="textPassword"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>