<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LogInFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtLoginPrompt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="Log In"
            android:textColor="@color/google_purple"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/ditUsername"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ditUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text"
            android:text=""
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ditUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_registration_text"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ditUsername" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ditUserPassword" />

        <Button
            android:id="@+id/btnCreateNew"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>