<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.activity.HomeScreenActivity">

    <Button
        android:id="@+id/LocationsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/location_button"
        android:layout_margin="1dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierBottom"
        app:layout_constraintBottom_toTopOf="@+id/CreateButton"/>

    <Button
        android:id="@+id/CreateButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/create_button"
        android:layout_margin="1dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LocationsButton"
        app:layout_constraintBottom_toTopOf="@+id/ViewButton"
        />

    <Button
        android:id="@+id/ViewButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/view_button"
        android:layout_margin="1dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/settings_button_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_settings_24" />

    <TextView
        android:id="@+id/txtHomeScreenWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAppLogo" />

    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/txtHomeScreenWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrierTop"
        app:srcCompat="@drawable/tournament_app_logo" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="settingsButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="guideline" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal" />

    <FrameLayout
        android:id="@+id/frgHomeScreenContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
