<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.fragment.AccountSettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/accountSettingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/account_settings_text"
            android:textSize="34sp"
            android:textColor="@color/google_purple"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scollTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/settingsEditUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_username_text"
                    android:inputType="text|textEmailAddress"
                    android:layout_marginEnd="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/usernameSettingsText"
                    app:layout_constraintTop_toBottomOf="@+id/usernameSettingsText" />

                <TextView
                    android:id="@+id/usernameSettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_registration_text"
                    android:textSize="24sp"
                    android:layout_marginStart="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/passwordSettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password_registration_text"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/settingsEditUsername"
                    app:layout_constraintTop_toBottomOf="@+id/settingsEditUsername"
                    tools:text="@string/password_registration_text" />

                <EditText
                    android:id="@+id/settingsEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/new_password_text"
                    android:inputType="text|textPassword"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordSettingsText" />

                <TextView
                    android:id="@+id/reenterPasswordSettingsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/reenter_password_registration_text"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsEditPassword" />

                <EditText
                    android:id="@+id/settingsReenterPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/reenter_new_password_"
                    android:inputType="text|textPassword"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/reenterPasswordSettingsText"
                    app:layout_constraintTop_toBottomOf="@+id/reenterPasswordSettingsText" />

                <Button
                    android:id="@+id/settingsBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/back_button_text"
                    app:layout_constraintEnd_toStartOf="@+id/settingsSubmitButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/settingsReenterPassword"
                    app:layout_constraintTop_toBottomOf="@+id/settingsReenterPassword" />

                <Button
                    android:id="@+id/settingsSubmitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit_button_text"
                    app:layout_constraintEnd_toEndOf="@+id/settingsReenterPassword"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toEndOf="@+id/settingsBackButton"
                    app:layout_constraintTop_toBottomOf="@+id/settingsReenterPassword" />

                <Button
                    android:id="@+id/btnDeleteAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsSubmitButton"
                    app:layout_constraintVertical_bias="0.050000012" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.15"
            android:orientation="horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>